--- a/GraphQL.Serverless/GraphQLServerless.csproj
+++ b/GraphQL.Serverless/GraphQLServerless.csproj
@@ -10,10 +10,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.1" />
-    
     <PackageReference Include="GraphQL.AzureFunctionsProxy" Version="12.0.0.1" />
     <PackageReference Include="GraphQL.AzureFunctionsProxy.IsolatedProcess" Version="12.0.0" />
     
@@ -22,11 +18,9 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.3.0" OutputItemType="Analyzer" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.6.0" />
-    <PackageReference Include="HotChocolate.AspNetCore" Version="12.4.1" />
-    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.4.1" />
-    <PackageReference Include="HotChocolate.Data" Version="12.4.1" />
-    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.4.1" />
-    <PackageReference Include="HotChocolate.PersistedQueries.FileSystem" Version="12.4.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GraphQL.Core\GraphQL.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="app.settings.json">
@@ -41,8 +35,5 @@
     <None Update="local.settings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Database\Database.csproj" />
   </ItemGroup>
 </Project>
